updated README, changelog & news files

--- a/data/news/news.2
+++ b/data/news/news.2
@@ -1,7 +1,8 @@
 # 2019-06-01
 
-     Version 0.1.1 of Fuchsschwanz released today. It comes with the
-     following new commands:
+     Version 0.1.1 of Fuchsschwanz released today. It comes with
+     the following new commands:
+
           * /echoback
           * /news
           * /v
@@ -12,5 +13,6 @@
           * /log
 
      The following features were implemented:
+
           * /w command arguments (-s, -g, . and group name)
           * idle-boot and idle-mod options
