--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,14 @@
+# 2019-06-08 v0.1.2
+	* FEATURE: TLS support
+	* FEATURE: UTF-8 support
+	* FEATURE: /stats
+	* FEATURE: /drop
+	* FEATURE: /whereis -a option
+	* FEATURE: new user status flags (a, r)
+	* FEATURE: accept noop messages
+	* FIX: send 'wl' instead of 'co' messages in who listing
+	* FIX: don't crash when client sends initial group status
+
 # 2019-06-01 v0.1.1
 	* FEATURE: /echoback
 	* FEATURE: /news
