--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+# 2019-06-18 v0.1.3
+	* FEATURE: optimized idle time check
+	* FEATURE: keep-alive timeout
+	* FEATURE: SQLite performance enhancements
+	* FEATURE: hush/invitation/talker list limits
+	* FIX: empty private messages to server caused crash :)
+	* FIX: drop all moderator privileges when signing off
+
 # 2019-06-08 v0.1.2
 	* FEATURE: TLS support
 	* FEATURE: UTF-8 support
