--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+# 2019-08-08 v0.1.4
+	* FEATURE: email addresses are hidden by default
+	* FEATURE: email addresses can be confirmed
+	* FEATURE: message forwarding (personal inbox to email)
+	* FEATURE: password reset
+	* FEATURE: admins can change passwords
+
 # 2019-06-18 v0.1.3
 	* FEATURE: optimized idle time check
 	* FEATURE: keep-alive timeout
