--- a/data/news/news.5
+++ b/data/news/news.5
@@ -1,4 +1,4 @@
-# 2019-09-?? v0.1.4
+# 2019-09-07 v0.1.4
 
      Fuchsschwanz version 0.1.4 is now available! It comes with
      the following great enhancements:
@@ -17,6 +17,6 @@
 
                           -- see /m server /newpasswd
 
-          * FEATURE: admins can change the password of other users
+          * FEATURE: admins can change passwords
 
                           -- see /m server /passwd
