--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,12 @@
+# 2019-10-18 v0.1.5
+	* FIX: send correct moderator flag
+	* FEATURE: /avatar, /picture
+	* FEATURE: /ipfilter
+	* FEATURE: /restart, /shutdown, /abort
+	* FEATURE: /whoami
+	* FEATURE: --auto-respawn option
+	* FEATURE: better child process handling
+
 # 2019-09-07 v0.1.4
 	* FEATURE: email addresses are hidden by default
 	* FEATURE: email addresses can be confirmed
